syntax = "proto3";
import "RegionSimpleInfo.proto";

option csharp_namespace = "FurinaImpact.Protocol";
message QueryRegionListHttpRsp {
  bytes client_custom_config_encrypted = 6;
  bytes client_secret_key = 5;
  repeated RegionSimpleInfo region_list = 2;
  int32 retcode = 1;
  bool enable_login_pc = 7;
}
